@@ -1,3 +1,5 @@
+// src/main/java/az/edu/itbrains/food/services/impl/TestimonialService.java
+
 package az.edu.itbrains.food.services.impl;
 
 import az.edu.itbrains.food.DTOs.response.TestimonialResponseDTO;
@@ -7,26 +9,26 @@ import az.edu.itbrains.food.services.ITestimonialService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class TestimonialServiceImpl implements ITestimonialService {
+
     private final TestimonialRepository testimonialRepository;
-    private final ModelMapper modelMapper;
-
+    private final ModelMapper modelMapper; // ModelMapper bean kimi qeyd edilibsə
 
     @Override
-    public Testimonial save(Testimonial testimonial) {
-        return testimonialRepository.save(testimonial);
-
-    }
-    @Override
-    public List<TestimonialResponseDTO> findAll() {
+    public List<TestimonialResponseDTO> getAll() {
         return testimonialRepository.findAll()
                 .stream()
-                .map(t -> modelMapper.map(t, TestimonialResponseDTO.class))
-                .toList();
+                .map(testimonial -> modelMapper.map(testimonial, TestimonialResponseDTO.class))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public void save(Testimonial testimonial) {
+        testimonialRepository.save(testimonial);
     }
 }
